--- a/bin/install
+++ b/bin/install
@@ -6,20 +6,16 @@
 # Author: Nikolai Plath
 #
 
-check() {
-  if ! command -v "$1" &>/dev/null; then
-    echo "❌ ERROR: Command '$1' could not be found on your system :("
-    exit 1
-  fi
-}
-
-check "composer"
-check "docker-compose"
-check "symfony"
-
 # Ensure we're in the right spot. @todo this only works in bash :(
 DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null 2>&1 && cd .. && pwd)"
 cd "$DIR" || exit 1
+DOCKER_CONTAINER="$(basename "$DIR")-database-1"
+
+. ./bin/functions.sh
+
+checkIsInstalled composer
+checkIsInstalled docker-compose
+checkIsInstalled symfony
 
 echo "🚀 Setting up dev env in $DIR ..."
 
@@ -27,13 +23,8 @@ composer install
 
 docker-compose up -d
 
-#Docker needs some time to start @todo check if docker container is running? `docker ps` maybe?
-echo -n 'Waiting for db... '
-for value in {5..1}; do
-  echo -n "$value..."
-  sleep 1
-done
-echo 'hopefully... =;)'
+echo -n 'Waiting for db '
+waitContainer "$DOCKER_CONTAINER"
 
 symfony console doctrine:migrations:migrate -n
 
